Bug 95321 - FILEOPEN: Tables no longer imported correctly from Word .doc files
Summary: FILEOPEN: Tables no longer imported correctly from Word .doc files
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-10-26 04:17 UTC by Luke
Modified: 2016-10-25 19:20 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Simplified example (27.00 KB, application/msword)
2015-10-26 05:08 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2015-10-26 04:17:09 UTC
I've noticed some tables within MS-DOC files are no longer correctly being imported. 

Steps to reproduce:
1. In LO 5.1, open attachment 81320 [details] 
2. In LO 5.0, open attachment 81320 [details] 
3. Compare compare the table in the footer of the first page

Note table5 is incorrectly imported with all of the content placed in the first cell. The drawing should be placed in the 2nd column. Using local builds, I have narrowed the regression down to this range.

http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=c65ff0723f3b0df108bec006be6d5939d4999e10..14bb562b4a8776974391641adcc62ded013ffd2f
Comment 1 Luke 2015-10-26 05:08:10 UTC
Created attachment 119952 [details]
Simplified example

This is just simple 2 column table that shows how all the text from the second cell is placed in the first one.
Comment 2 Buovjaga 2015-10-26 08:56:12 UTC
Confirmed.

Win 7 Pro 64-bit, Version: 5.0.2.2 (x64)
Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe
Locale: fi-FI (fi_FI)

Version: 5.1.0.0.alpha1+
Build ID: fcc2415ade6ae93710bbbda9f7e163045e323105
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-10-21_16:55:13
Locale: fi-FI (fi_FI)
Comment 3 Luke 2015-10-26 22:47:49 UTC
I bisected this regression down to:

commit 959ac511dbebeb3983da92052ced837b39b74ed9
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Mon Oct 12 20:56:51 2015 +0100

    fix tdf#94818 while retaining the tdf#90504 fix

Caolán 
Looks like we need another fix here, otherwise any tables in the header or footer get mangled on import.
Comment 4 Luke 2015-11-09 16:01:09 UTC
Andras Timar,
Fixed this with:

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dad32b63f852716af94cf995696b62b6e60724bd

Revert "fix tdf#94818 while retaining the tdf#90504 fix"
This reverts commit 959ac511dbebeb3983da92052ced837b39b74ed9.

Will close when verified fixed.
Comment 5 Andras Timar 2015-11-09 16:59:57 UTC
Sorry, I did not fix anything, I accidentally reverted Caolan's commit, then I reverted the revert.
Comment 6 Commit Notification 2015-11-11 13:10:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6128c10f550924c2b75f18b6c6220cc1770adba4

Resolves: tdf#95321 tables in headers/footers with wrong content

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2015-11-11 13:12:29 UTC
https://gerrit.libreoffice.org/19911 for 5.0.X review
Comment 8 Commit Notification 2015-11-13 21:28:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=82c0f2eb67f8fda9981fe83ebab3d658b6ec85fd&h=libreoffice-5-0

Resolves: tdf#95321 tables in headers/footers with wrong content

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Luke 2015-11-13 22:40:10 UTC
Verified both test cases are working now with Version: 5.1.0.0.alpha1+
Build ID: 4235138c2f16d60b84c1a9c9465c9af0e2a137d6

Thanks Caolán!
Comment 10 Robinson Tryon (qubit) 2015-12-17 10:34:41 UTC Comment hidden (obsolete)