Resolves: tdf#95321 tables in headers/footers with wrong content

Change-Id: I937ed893dfd9919bf48b8fd38a1b83c524200532